--- a/myblog/static/src/css/text.css
+++ b/myblog/static/src/css/text.css
@@ -1,517 +1,439 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-only delete 'ol' element 
-*/
-
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
-}
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
-}
-body {
-	line-height: 1;
-}
-ul {
-	list-style: none;
-}
-blockquote, q {
-	quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
-}
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
-}
-
-/* text */
-html {
-  -webkit-font-smoothing: antialiased;
-  font-size: 16px;
-}
-
-header {
-  background: #fff;
-  font-size: 10px;
-}
-
-body {
-  -webkit-font-smoothing: antialiased;
-  font-family: 'Spoqa Han Sans','Spoqa Han Sans JP','Sans-serif';
-  color: #353a3d;
-  word-wrap: break-word;
-}
-
-::-moz-selection {
-   background-color: #6200ea;
-   color: #fff;
-}
-::selection {
-    background-color: #6200ea;
-    color: #fff;
-}
-
-@media only screen and (max-width: 384px) {
-
-  p {
-    font-size: 0.8em;
-  }
-}
-
-@media only screen and (max-width: 550px) {
-  h1 {
-    font-size: 1.8em;
-  }
-
-  p {
-    font-size: 0.8em;
-  }
-}
-
-
-
-
+@charset "UTF-8";
 /*
-title: Github Markdown Stylesheet
-author: Chris Patuzzo
-available at: https://gist.github.com/tuzz/3331384
+UPDATE : 2017.02.
+AUTHOR : SUJIN LEE (sujinlee.me@gmail.com)
 */
+/* === Common Style === */
+/* main color */
+/* layout */
+/* left navigation */
+/* css reset */
+body,
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+ul,
+ol,
+li,
+dl,
+dt,
+dd,
+table,
+th,
+td,
+form,
+fieldset,
+legend,
+input,
+textarea,
+button,
+select,
+menu {
+  margin: 0;
+  padding: 0; }
 
-body > :first-child {
-  margin-top: 0 !important;
-}
-
-body > :last-child {
-  margin-bottom: 0 !important;
-}
-
-i {
-  font-family: fontawesome;
-}
+button {
+  background: none;
+  border: none;
+  outline: none; }
 
 a {
-  color: #6200ea;
-  text-decoration: none;
-}
+  text-decoration: none; }
 
-.markdown-body a:hover {
-  background: #6200ea;
-  color: #fff;
-}
+ul,
+ol {
+  list-style: none; }
 
-a.absent {
-  color: #c00;
-}
+blockquote,
+q {
+  quotes: none; }
 
-a.anchor {
-  display: block;
-  padding-left: 30px;
-  margin-left: -30px;
-  cursor: pointer;
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-}
-
-
-h1,h2,h3,h4,h5 {
-  margin: 20px 0 10px;
-  padding: 0;
-  cursor: text;
-  position: relative;
-  letter-spacing: .005em;
-  font-weight: 400;
-  color: #050505;
-  vertical-align:middle;
-}
-
-.markdown-body h2:before {
-   content: "# ";
-   color: #e4d3fb;
-   font-weight: 600;
-}
-
-.markdown-body h3:before {
-   content: "## ";
-   color: #e4d3fb;
-   font-weight: 600;
-}
-
-h2:first-child,h1:first-child,h1:first-child + h2,h3:first-child,h4:first-child,h5:first-child,h6:first-child {
-  margin-top: 0;
-  padding-top: 0;
-}
-
-h1:hover a.anchor,h2:hover a.anchor,h3:hover a.anchor,h4:hover a.anchor,h5:hover a.anchor,h6:hover a.anchor {
-  text-decoration: none;
-}
-
-h1 tt,h1 code {
-  font-size: inherit;
-}
-
-h2 tt,h2 code {
-  font-size: inherit;
-}
-
-h3 tt,h3 code {
-  font-size: inherit;
-}
-
-h4 tt,h4 code {
-  font-size: inherit;
-}
-
-h5 tt,h5 code {
-  font-size: inherit;
-}
-
-h6 tt,h6 code {
-  font-size: inherit;
-}
-
-h1 {
-  font-size: 1.5em;
-  text-align: center;
-}
-
-h2 {
-  font-size: 20px;
-}
-
-h3 {
-  font-size: 18px;;
-}
-
-h4 {
-  font-size: 16px;
-}
-
-h5 {
-  font-size: 14px;
-}
-
-h6 {
-  color: #777;
-  font-size: 12px;
-  font-family: 'Spoqa Han Sans','Spoqa Han Sans JP','Sans-serif';
-  font-weight: 400;
-}
-
-p,blockquote,ul,ol,dl,table{
-  margin: 16px 0;
-  font-size: 0.9rem;
-  line-height: 1.8rem;
-  vertical-align:middle;
-}
-
-hr {
-  border: 0 none;
-  color: #ccc;
-  height: 4px;
-  padding: 0;
-}
-
-body > h2:first-child {
-  margin-top: 0;
-  padding-top: 0;
-}
-
-body > h1:first-child {
-  margin-top: 0;
-  padding-top: 0;
-}
-
-body > h1:first-child + h2 {
-  margin-top: 0;
-  padding-top: 0;
-}
-
-body > h3:first-child,body > h4:first-child,body > h5:first-child,body > h6:first-child {
-  margin-top: 0;
-  padding-top: 0;
-}
-
-a:first-child h1,a:first-child h2,a:first-child h3,a:first-child h4,a:first-child h5,a:first-child h6 {
-  margin-top: 0;
-  padding-top: 0;
-}
-
-h1 p,h2 p,h3 p,h4 p,h5 p,h6 p {
-  margin-top: 0;
-}
-
-li p.first {
-  display: inline-block;
-}
-
-ul,ol {
-  padding-left: 30px;
-}
-
-ul :first-child,ol :first-child {
-  margin-top: 0;
-}
-
-ul :last-child,ol :last-child {
-  margin-bottom: 0;
-}
-
-dl {
-  padding: 0;
-}
-
-dl dt {
-  font-size: 14px;
-  font-weight: 700;
-  font-style: italic;
-  padding: 0;
-  margin: 15px 0 5px;
-}
-
-dl dt:first-child {
-  padding: 0;
-}
-
-dl dt > :first-child {
-  margin-top: 0;
-}
-
-dl dt > :last-child {
-  margin-bottom: 0;
-}
-
-dl dd {
-  margin: 0 0 15px;
-  padding: 0 15px;
-}
-
-dl dd > :first-child {
-  margin-top: 0;
-}
-
-dl dd > :last-child {
-  margin-bottom: 0;
-}
-
-blockquote {
-  border-left: 4px solid #F2EAFD;
-  padding: 0 15px;
-  margin: 20px 40px;
-  color: #6c7d86;
-}
-
-blockquote:before {
-  content: "";
-}
-
-blockquote:after {
-  content: "";
-}
-
-blockquote > :last-child {
-  margin-bottom: 0;
-}
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: '';
+  content: none; }
 
 table {
-  padding: 0;
-  max-width: 100%;
-}
+  border-collapse: collapse;
+  border-spacing: 0; }
 
-table tr {
-  border-top: 1px solid #F2EAFD;
-  background-color: #fff;
-  margin: 0;
-  padding: 0;
-}
+/* typograhpy */
+html {
+  font-size: 15px; }
 
-table tr:nth-child(2n) {
-  background-color: #fff;
-}
+body {
+  -webkit-font-smoothing: antialiased;
+  font-family: 'Poppins', sans-serif;
+  color: #232528;
+  word-wrap: break-word;
+  display: flex;
+  justify-content: center;
+  align-items: center; }
 
-table tr th {
+::-moz-selection {
+  background-color: #4B21FF; }
+
+::selection {
+  background-color: #4B21FF;
+  color: #fff; }
+
+/* header */
+h1,
+h2 {
   font-weight: 700;
-  border: 1px solid #F2EAFD;
-  background: #F2EAFD;
-  text-align: left;
-  margin: 0;
-  padding: 6px 13px;
-}
+  text-transform: uppercase; }
 
-table tr td {
-  border: 1px solid  #F2EAFD;
-  text-align: left;
-  margin: 0;
-  padding: 6px 13px;
-}
+h3 {
+  font-weight: 500; }
 
-table tr th :first-child,table tr td :first-child {
-  margin-top: 0;
-}
+.post_body {
+  line-height: 2rem;
+  /*
+Modify from Github Markdown Stylesheet
+author: Chris Patuzzo
+available at: https://gist.github.com/tuzz/3331384
+*/ }
+  .post_body body > :first-child {
+    margin-top: 0 !important; }
+  .post_body body > :last-child {
+    margin-bottom: 0 !important; }
+  .post_body a.absent {
+    color: #FA055F; }
+  .post_body a:active,
+  .post_body a:visited {
+    color: #FA055F; }
+  .post_body a.anchor {
+    display: block;
+    padding-left: 30px;
+    margin-left: -30px;
+    cursor: pointer;
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0; }
+  .post_body mark {
+    background-color: transparent;
+    color: #4B21FF; }
+  .post_body h1:hover a.anchor,
+  .post_body h2:hover a.anchor,
+  .post_body h3:hover a.anchor,
+  .post_body h4:hover a.anchor,
+  .post_body h5:hover a.anchor,
+  .post_body h6:hover a.anchor {
+    text-decoration: none; }
+  .post_body h1 tt,
+  .post_body h1 code {
+    font-size: inherit; }
+  .post_body h2 tt,
+  .post_body h2 code {
+    font-size: inherit; }
+  .post_body h3 tt,
+  .post_body h3 code {
+    font-size: inherit; }
+  .post_body h4 tt,
+  .post_body h4 code {
+    font-size: inherit; }
+  .post_body h5 tt,
+  .post_body h5 code {
+    font-size: inherit; }
+  .post_body h6 tt,
+  .post_body h6 code {
+    font-size: inherit; }
+  .post_body h1 {
+    font-size: 1.5rem;
+    margin-bottom: 3.5vh; }
+  .post_body h2 {
+    font-size: 1.3rem;
+    padding-top: 3.5vh;
+    margin-bottom: 3.5vh; }
+  .post_body h3 {
+    padding-top: 3.5vh;
+    font-size: 1.2rem; }
+  .post_body h4 {
+    font-size: 16px; }
+  .post_body h5 {
+    font-size: 14px; }
+  .post_body h6 {
+    color: rgba(35, 37, 40, 0.1);
+    font-size: 12px;
+    font-weight: 400; }
+  .post_body li p {
+    margin: 0; }
+  .post_body p {
+    margin-bottom: 3.5vh; }
+  .post_body p,
+  .post_body blockquote,
+  .post_body ul,
+  .post_body ol,
+  .post_body dl,
+  .post_body table {
+    font-size: 1rem;
+    vertical-align: middle; }
+  .post_body blockquote,
+  .post_body ul,
+  .post_body ol,
+  .post_body dl,
+  .post_body table {
+    margin-top: 3.5vh;
+    padding-bottom: 3.5vh; }
+  .post_body ul:first-child {
+    margin-top: 0; }
+  .post_body ul > h3 {
+    padding-top: 0; }
+  .post_body ul,
+  .post_body ol {
+    list-style: initial; }
+  .post_body hr {
+    border: 0 none;
+    color: #ccc;
+    height: 4px;
+    padding: 0; }
+  .post_body p > ul {
+    margin-top: 0; }
+  .post_body body > h2:first-child {
+    margin-top: 0;
+    padding-top: 0; }
+  .post_body body > h1:first-child {
+    margin-top: 0;
+    padding-top: 0; }
+  .post_body body > h1:first-child + h2 {
+    margin-top: 0;
+    padding-top: 0; }
+  .post_body body > h3:first-child,
+  .post_body body > h4:first-child,
+  .post_body body > h5:first-child,
+  .post_body body > h6:first-child {
+    margin-top: 0;
+    padding-top: 0; }
+  .post_body a:first-child h1,
+  .post_body a:first-child h2,
+  .post_body a:first-child h3,
+  .post_body a:first-child h4,
+  .post_body a:first-child h5,
+  .post_body a:first-child h6 {
+    margin-top: 0;
+    padding-top: 0; }
+  .post_body h1 p,
+  .post_body h2 p,
+  .post_body h3 p,
+  .post_body h4 p,
+  .post_body h5 p,
+  .post_body h6 p {
+    margin-top: 0; }
+  .post_body dl {
+    padding: 0; }
+  .post_body dl dt {
+    font-size: 14px;
+    font-weight: 700;
+    font-style: italic;
+    padding: 0;
+    margin: 15px 0 5px; }
+  .post_body dl dt:first-child {
+    padding: 0; }
+  .post_body dl dt > :first-child {
+    margin-top: 0; }
+  .post_body dl dt > :last-child {
+    margin-bottom: 0; }
+  .post_body dl dd {
+    margin: 0 0 15px;
+    padding: 0 15px; }
+  .post_body dl dd > :first-child {
+    margin-top: 0; }
+  .post_body dl dd > :last-child {
+    margin-bottom: 0; }
+  .post_body li p.first {
+    display: inline-block; }
+  .post_body blockquote {
+    border-left: 4px solid rgba(35, 37, 40, 0.1);
+    padding: 0 15px;
+    margin: 20px 40px;
+    color: rgba(0, 0, 0, 0.6); }
+  .post_body blockquote:before {
+    content: ""; }
+  .post_body blockquote:after {
+    content: ""; }
+  .post_body blockquote > :last-child {
+    margin-bottom: 0; }
+  .post_body table {
+    padding: 0;
+    max-width: 100%; }
+  .post_body table tr {
+    border-top: 1px solid rgba(35, 37, 40, 0.1);
+    background-color: #fff;
+    margin: 0;
+    padding: 0; }
+  .post_body table tr:nth-child(2n) {
+    background-color: #fff; }
+  .post_body table tr th {
+    font-weight: 700;
+    border: 1px solid rgba(35, 37, 40, 0.1);
+    background: rgba(35, 37, 40, 0.1);
+    text-align: left;
+    margin: 0;
+    padding: 6px 13px; }
+  .post_body table tr td {
+    border: 1px solid rgba(35, 37, 40, 0.1);
+    text-align: left;
+    margin: 0;
+    padding: 6px 13px; }
+  .post_body table tr th:first-child,
+  .post_body table tr td:first-child {
+    margin-top: 0; }
+  .post_body table tr th:last-child,
+  .post_body table tr td:last-child {
+    margin-bottom: 0; }
+  .post_body span.frame {
+    display: block;
+    overflow: hidden; }
+  .post_body span.frame > span {
+    border: 1px solid #ebeeef;
+    display: block;
+    float: left;
+    overflow: hidden;
+    margin: 13px 0 0;
+    padding: 7px;
+    width: auto; }
+  .post_body span.frame span img {
+    display: block;
+    float: left; }
+  .post_body span.frame span span {
+    clear: both;
+    color: #333;
+    display: block;
+    padding: 5px 0 0; }
+  .post_body span.align-center {
+    display: block;
+    overflow: hidden;
+    clear: both; }
+  .post_body span.align-center > span {
+    display: block;
+    overflow: hidden;
+    margin: 13px auto 0;
+    text-align: center; }
+  .post_body span.align-center span img {
+    margin: 0 auto;
+    text-align: center; }
+  .post_body span.align-right {
+    display: block;
+    overflow: hidden;
+    clear: both; }
+  .post_body span.align-right > span {
+    display: block;
+    overflow: hidden;
+    margin: 13px 0 0;
+    text-align: right; }
+  .post_body span.align-right span img {
+    margin: 0;
+    text-align: right; }
+  .post_body span.float-left {
+    display: block;
+    margin-right: 13px;
+    overflow: hidden;
+    float: left; }
+  .post_body span.float-left span {
+    margin: 13px 0 0; }
+  .post_body span.float-right {
+    display: block;
+    margin-left: 13px;
+    overflow: hidden;
+    float: right; }
+  .post_body span.float-right > span {
+    display: block;
+    overflow: hidden;
+    margin: 13px auto 0;
+    text-align: right; }
+  .post_body code,
+  .post_body tt {
+    margin: 0 2px;
+    padding: 0 5px;
+    white-space: nowrap;
+    border: 1px solid rgba(35, 37, 40, 0.1);
+    background-color: rgba(35, 37, 40, 0.1);
+    border-radius: 4px; }
+  .post_body pre code {
+    margin: 0;
+    padding: 0;
+    white-space: pre-wrap;
+    /* CSS 2.0 */
+    white-space: pre-wrap;
+    /* CSS 2.1 */
+    white-space: pre-wrap;
+    /* CSS 3.0 */
+    white-space: -pre-wrap;
+    /* Opera 4-6 */
+    white-space: -o-pre-wrap;
+    /* Opera 7 */
+    white-space: -moz-pre-wrap;
+    /* Mozilla */
+    white-space: -hp-pre-wrap;
+    /* HP Printers */
+    word-wrap: break-word;
+    /* IE 5+ */
+    border: none;
+    background: transparent;
+    color: #fff; }
+  .post_body pre {
+    background: #282a36;
+    line-height: 2rem;
+    font-size: 0.9em;
+    overflow: auto;
+    padding: 6px 10px;
+    border-radius: 2px;
+    width: inherit;
+    font-family: 'Source Code Pro', monospace; }
+  .post_body pre code,
+  .post_body pre tt {
+    background-color: transparent;
+    border: none;
+    font-family: 'Source Code Pro', monospace; }
+  .post_body .post_body ul {
+    list-style-type: initial !important; }
+  .post_body .post_body ul:first-child {
+    margin-top: 0; }
+  .post_body .post_body ul:first-child,
+  .post_body .post_body ol:first-child {
+    margin-top: 0;
+    padding: 0; }
+  .post_body .post_body ul:last-child,
+  .post_body .post_body ol:last-child {
+    margin-bottom: 0; }
 
-table tr th :last-child,table tr td :last-child {
-  margin-bottom: 0;
-}
+/* quote */
+.quote {
+  font-weight: 500;
+  color: #4B21FF; }
 
-img {
-  max-width: 100%;
-}
+.page_title {
+  display: flex; }
+  .page_title h1 {
+    vertical-align: middle; }
 
-span.frame {
-  display: block;
-  overflow: hidden;
-}
+.page_title h1,
+.post_title h1 {
+  font-size: 2rem;
+  line-height: 2rem;
+  letter-spacing: 0.1rem; }
 
-span.frame > span {
-  border: 1px solid #ebeeef;
-  display: block;
-  float: left;
-  overflow: hidden;
-  margin: 13px 0 0;
-  padding: 7px;
-  width: auto;
-}
+.post_title h1 {
+  text-align: center; }
 
-span.frame span img {
-  display: block;
-  float: left;
-}
+/* home -- index.html*/
+.home_title h1 {
+  font-size: 2.2rem;
+  margin-bottom: 4%; }
 
-span.frame span span {
-  clear: both;
-  color: #333;
-  display: block;
-  padding: 5px 0 0;
-}
+.home_title h2 {
+  margin-bottom: 8%;
+  font-size: 1.4rem; }
 
-span.align-center {
-  display: block;
-  overflow: hidden;
-  clear: both;
-}
-
-span.align-center > span {
-  display: block;
-  overflow: hidden;
-  margin: 13px auto 0;
-  text-align: center;
-}
-
-span.align-center span img {
-  margin: 0 auto;
-  text-align: center;
-}
-
-span.align-right {
-  display: block;
-  overflow: hidden;
-  clear: both;
-}
-
-span.align-right > span {
-  display: block;
-  overflow: hidden;
-  margin: 13px 0 0;
-  text-align: right;
-}
-
-span.align-right span img {
-  margin: 0;
-  text-align: right;
-}
-
-span.float-left {
-  display: block;
-  margin-right: 13px;
-  overflow: hidden;
-  float: left;
-}
-
-span.float-left span {
-  margin: 13px 0 0;
-}
-
-span.float-right {
-  display: block;
-  margin-left: 13px;
-  overflow: hidden;
-  float: right;
-}
-
-span.float-right > span {
-  display: block;
-  overflow: hidden;
-  margin: 13px auto 0;
-  text-align: right;
-}
-
-code,tt {
-  margin: 0 2px;
-  padding: 0 5px;
-  white-space: nowrap;
-  border: 1px solid #F2EAFD;
-  background-color: #F2EAFD;
-  border-radius: 4px;
-
-}
-
-pre code {
-  margin: 0;
-  padding: 0;
-	white-space:       pre-wrap;      /* CSS 2.0 */
-	white-space:      pre-wrap; /* CSS 2.1 */
-	white-space:      pre-wrap; /* CSS 3.0 */
-	white-space:     -pre-wrap; /* Opera 4-6 */
-	white-space:   -o-pre-wrap; /* Opera 7 */
-	white-space: -moz-pre-wrap; /* Mozilla */
-	white-space:  -hp-pre-wrap; /* HP Printers */
-	word-wrap: break-word;      /* IE 5+ */
-  border: none;
-  background: transparent;
-  color: #fff;
-}
-
-pre {
-  background: #282a36;
-  line-height: 1.7em;
-  font-size: 0.9rem;
-  overflow: auto;
-  padding: 6px 10px;
-  border-radius: 2px;
-  width: inherit;
-  font-family: 'Source Code Pro', monospace;
-}
-
-pre code,pre tt {
-  background-color: transparent;
-  border: none;
-  font-family: 'Source Code Pro', monospace;
-}
+.home_title h3 {
+  font-size: 1.2rem; }
 
 /*
 Customization Dracula Theme v1.2.0
@@ -522,29 +444,25 @@ http://zenorocha.mit-license.org
 @author Éverton Ribeiro <nuxlli@gmail.com>
 @author Zeno Rocha <hi@zenorocha.com>
 */
-
 .hljs {
   display: block;
   overflow-x: auto;
-  background: #282a36;
-}
+  background: #232528;
+  padding: 1%; }
 
 .hljs-keyword,
 .hljs-selector-tag,
 .hljs-literal,
 .hljs-section,
 .hljs-link {
-  color: #8be9fd;
-}
+  color: #8be9fd; }
 
 .hljs-function .hljs-keyword {
-  color: #ff79c6;
-}
+  color: #ff79c6; }
 
 .hljs,
 .hljs-subst {
-  color: #f8f8f2;
-}
+  color: #f8f8f2; }
 
 .hljs-string,
 .hljs-title,
@@ -557,15 +475,13 @@ http://zenorocha.mit-license.org
 .hljs-variable,
 .hljs-template-tag,
 .hljs-template-variable {
-  color: #f1fa8c;
-}
+  color: #f1fa8c; }
 
 .hljs-comment,
 .hljs-quote,
 .hljs-deletion,
 .hljs-meta {
-  color: #6272a4;
-}
+  color: #6272a4; }
 
 .hljs-keyword,
 .hljs-selector-tag,
@@ -576,9 +492,7 @@ http://zenorocha.mit-license.org
 .hljs-type,
 .hljs-name,
 .hljs-strong {
-  font-weight: bold;
-}
+  font-weight: bold; }
 
 .hljs-emphasis {
-  font-style: italic;
-}
+  font-style: italic; }
