--- a/myblog/templates/blog/about.html
+++ b/myblog/templates/blog/about.html
@@ -1,78 +1,51 @@
 {% extends 'blog/base.html' %}
 {% load staticfiles %}
+
+{% block title %}
+<title>About - Sujin Lee</title>
+{% endblock %}
+
+{% block ogtags %}
+<meta property="og:type" content="Sujin Lee:Post" />
+<meta property="og:title" content="About - Sujin Lee" />
+<meta property="og:description" content="Creative Developer" />
+<meta property="og:image" content="http://www.sujinlee.me/image/background/profile-about.png" />
+<meta property="og:url" content="http://www.sujinlee.me/project/" />
+
+{% endblock %}
 {% block content %}
-<style>
-  .Offscreen {background: #8c39ff;}
-</style>
-<section class="page-name">
-  <h1> { ABOUT ME }</h1>
-</section>
-<main class="mdl-grid">
-  <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-  <div class="quote-box mdl-cell mdl-cell--8-col">
-    <p><i class="fa fa-quote-left"></i><br>
+<header class="page_title">
+  <h1> PROJECT</h1>
+</header>
+
+<div id="main_content">
+  <div id="post_wrap_v2" class="post_body">
+    <p class="quote">
       Study the science of art. Study the art of science.
       Develop your senses-learn how to see.<br>
       Realize that everything connects you to everything else. - Leonardo da Vinci</i><br>
-      <i class="fa fa-quote-right"></i>
     </p>
-  </div>
-  <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-  <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-  <div class=" mdl-cell mdl-cell--3-col mdl-cell--3-col-tablet mdl-cell--8-col-phone">
-    <div class="profile-box mdl-grid">
-      <div class="mdl-cell--12-col mdl-cell--4-col-tablet mdl-cell--8-col-phone">
-        <img id="about" src="{% static 'image/background/profile-about.png' %}" alt="profile" align="middle" onload="imgLoaded(this)">
-      </div>
-    </div>
-    <div class="contact-box mdl-grid">
-      <div class="mdl-cell--12-col ">
-        <h1>SUJIN <mark>LEE</mark></h1>
-        <h2><mark>A creative web developer</mark> who has a blended art and programming brain.</h2>
-      </div>
-    </div>
-  </div>
-  <div class="about-box mdl-cell mdl-cell--5-col mdl-cell--5-col-tablet mdl-cell--8-col-phone">
     <p>Hello, World! I am Sujin Lee from Seoul, Korea.<br>I write code. I play music.</p>
     <p>After completing my undergraduate studies in Music Composition & Education, I have pursued my passions of music and programming with equal vigor, aiming to make creative work that inspires. I want to use programming to unlock the secret of music masterpiece in the nearest future. I had learned classical music since I was young, but I have been born again as python and web developer.</p>
     <p>I am currently working in CONNECT foundation, which was established by Naver Corp. to provide software engineering education to young Koreans.</p>
     <p>While I enjoy all aspects of my job, I run Django Girl Seoul Community with friends to encourage women to jump into technology lately and we manage workshops about programming in Python and Django.</p>
     <p>If you want to say hello, I'm mostly on <a href="https://twitter.com/sujinleeme">twitter</a> or <a href="https://www.facebook.com/sujiniworld">facebook</a>. I always love hearing about you and new projects.</p>
   </div>
-  <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-  <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-  <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-  <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-  <section class="page-name">
-    <h1> What I use </h1>
-  </section>
-  <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-  <section class="mdl-cell mdl-cell--8-col">
-    <div class="dev-icons">
-      <ul>
-        <li><span>python3</span></li>
-        <li><span>django</span></li>
-        <li><span>html5</span></li>
-        <li><span>css3</span></li>
-        <li><span>javascript</span></li>
-        <li><span>jquery</span></li>
-        <li><span>gulp</span></li>
-      </ul>
-    </div>
-  </section>
-  <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-  <section class="page-name">
-    <h1> Get in touch </h1>
-  </section>
-  <div class="btn-container">
-  <div class="contact-button" rippleria>
-    <a href="mailto:sujinlee.me@gmail.com?Subject=Hello%20Sujin">
-    <button class="btn-material"><span>Send to Mail</span></button></a>
+</div>
+<header class="page_title">
+  <h1>what i use</h1>
+</header>
+<div id="main_content">
+  <div id="post_wrap_v2" class="post_body">
+    <ul>
+      <li><span>python3</span></li>
+      <li><span>django</span></li>
+      <li><span>html5</span></li>
+      <li><span>css3</span></li>
+      <li><span>javascript</span></li>
+      <li><span>jquery</span></li>
+      <li><span>gulp</span></li>
+    </ul>
   </div>
-  <div class="contact-button" rippleria>
-    <a href="http://bit.ly/sujinlee-resume" class="newtab">
-    <button class="btn-material download"><span>Download Resume</span></button></a>
-  </div>
-  </section>
-</main>
+</div>
 {% endblock content %}
