--- a/myblog/templates/blog/base.html
+++ b/myblog/templates/blog/base.html
@@ -3,116 +3,107 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <meta name="description" content="Sujin Lee's Personal Website">
+    <meta name="description" content="Sujin Lee | Creative Developer">
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0">
     <link rel="icon" type="image/png" href="{% static 'image/background/favicon_logo.png' %}">
-    <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     {% block title %}
-    <title>Sujin Lee</title>
+    <title>Sujin Lee - A Creative Developer</title>
     {% endblock %}
-
     <!-- meta tags -->
     <meta property="fb:app_id" content="1081681621896558" />
     <meta property="og:site_name" content="Sujin Lee" />
     <meta property="og:locale" content="en_US" />
     <meta property="og:locale:alternate" content="ko" />
     <meta property="og:title" content="Sujin Lee" />
-    <meta property="og:author" content="https://www.facebook.com/sujiniworld" />
-
+    <meta property="og:author" content="https://www.facebook.com/sujinlee.me" />
     {% block ogtags %}
     <meta property="og:type" content="website" />
     <meta property="og:description" content="The connectivist" />
-    <meta property="og:image"content="http://www.sujinlee.me/static/image/background/profile-about.png" />
-    <meta property="og:url" content="http://sujinlee.me/" />
+    <meta property="og:image"content="https://www.sujinlee.me/static/image/background/profile-about.png" />
+    <meta property="og:url" content="https://www.sujinlee.me/" />
     {% endblock %}
-
     <!-- fonts -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Share+Tech+Mono">
-    <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Space+Mono">
     <link rel="stylesheet" href="//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-kr.css">
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Source+Code+Pro">
     <link rel="stylesheet" href="//cdn.jsdelivr.net/devicons/1.8.0/css/devicons.min.css">
-
+    <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,700" rel="stylesheet">
     <!-- css -->
-    <link rel="stylesheet" href="{% static 'src/css/mdl-grid.css' %}">
     <link rel="stylesheet" href="{% static 'src/css/style.css' %}">
     <link rel="stylesheet" href="{% static 'src/css/text.css' %}">
-    
     <!-- javascript -->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
-    <script src="//unpkg.com/react@15/dist/react.min.js"></script>
-    <script src="//unpkg.com/react-dom@15/dist/react-dom.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/marked/0.3.5/marked.min.js"></script>
   </head>
-
   <!-- contents -->
-  <body itemscope itemtype="http://schema.org/Product">
-    <div id="wrapper">
-      <header id ="header" class="nav-wrap">
-        <div class="title"><a href="/">
-          <i class="fa fa-connectdevelop" aria-hidden="true"></i></a>
-        </div>
-        <div class="menu-toggle">
-            <div class="one"></div>
-            <div class="two"></div>
-            <div class="three"></div>
-          </div>
-        <div class="menu-section">
-          <nav>
-            <ul role="navigation" class="hidden">
-              <li><a class="" href="/" >HOME</a></li>
-              <li><a class="" href="/blog" >BLOG</a></li>
-              <li><a class="" href="/project" >PROJECT</a></li>
-              <li><a class="" href="/about" >ABOUT</a></li>
+  <body>
+    <div id="wrap">
+      <nav>
+        <menu class="ico_menu">
+          <ul>
+            <li class="line_1"></li>
+            <li class="line_2"></li>
+            <li class="line_3"></li>
+          </ul>
+        </menu>
+        <menuitem class="gnb">
+          <ul>
+            <li><a class="" href="/" >HOME</a></li>
+            <li><a class="" href="/blog" >BLOG</a></li>
+            <li><a class="" href="/project" >PROJECT</a></li>
+            <li><a class="" href="/about" >ABOUT</a></li>
+          </ul>
+        </menuitem>
+      </nav>
+      <div id="container">
+        <div id="snb_left_box">
+          <aside class="snb_left">
+            <h1><a href="/">Sujin Lee</a></h1>
+            <ul>
+              <ol>
+                EMAIL
+                <li>sujinlee.me@gmail.com</li>
+              </ol>
+              <ol>
+                Find Me On
+                <div class="ico_soical">
+                  <li ><a class="icon-social-github" href="http://www.github.com/sujinleeme"></a></li>
+                  <li ><a class="icon-social-linkedin" href="http://www.linkedin.com/in/leesujin"></a></li>
+                  <li ><a class="icon-social-facebook" href="http://www.facebook.com/sujinlee.me"></a></li>
+                  <li ><a class="icon-social-twitter" href="http://www.twitter.com/sujinleeme"></a></li>
+                  <li ><a class="icon-social-instagram" href="http://www.instagram.com/sujinlee.me/"></a></li>
+              </ol>
             </ul>
-          </nav>
+            </div>
+          </aside>
+          <main>
+            <div id="main_box">
+              {% block content %}{% endblock %}
+            </div>
+          </main>
         </div>
-    </header>
-      <main id="contents">
-        {% block content %}{% endblock %}
-      </main>
-      <footer id="#footer" class="footer" align="right">
-        <div class="socials">
-          <a href="http://www.medium.com/@sujinlee"><i class="fa fa-medium fa-2.0x"></i></a>
-          <a href="http://www.linkedin.com/in/leesujin"><i class="fa fa-linkedin fa-2.0x"></i></a>
-          <a href="http://www.github.com/sujinleeme"><i class="fa fa-github fa-2.0x"></i></a>
-          <a href="http://www.facebook.com/sujiniworld"><i class="fa fa-facebook fa-2.0x"></i></a>
-          <a href="http://www.twitter.com/sujinleeme"><i class="fa fa-twitter fa-2.0x"></i></a>
-          <a href="http://www.instagram.com/sujinlee.me/"><i class="fa fa-instagram fa-2.0x"></i></a>
-        </div>
-        <div class="copyright">
-          <i class="fa fa-copyright"></i>
-          SUJIN LEE
-        </div>
-      </footer>
+      </div>
     </div>
-
-
     {% block jsblock %}
     <!-- disqus -->
     <script scr="//sujinlee.disqus.com/embed.js"></script>
     <script src="//sujinlee.disqus.com/count.js" id="dsq-count-scr" async></script>
-
     <!-- javascript -->
-    <!-- build:js -->
-    <script src="{% static 'dist/js/script.min.js' %}"></script>
-    <!--<script src="{% static 'src/js/prefixfree.min.js' %}"></script>
     <script src="{% static 'src/js/script.js' %}"></script>
     <script src="{% static 'src/js/highlight.pack.js' %}"></script>
-    <script src="{% static 'src/js/social.js' %}"></script>-->
+    <script src="{% static 'src/js/social.js' %}"></script>
+    <!-- build:js -->
+    <!--<script src="{% static 'dist/js/script.min.js' %}"></script>-->
+    <!--<script src="{% static 'src/js/prefixfree.min.js' %}"></script>
+      <script src="{% static 'src/js/script.js' %}"></script>
+      <script src="{% static 'src/js/highlight.pack.js' %}"></script>
+      <script src="{% static 'src/js/social.js' %}"></script>-->
     <!-- endbuild -->
-
     <!--Code Syntax -->
     <script>hljs.initHighlightingOnLoad();</script>
-    <!--Image Loading -->
-    <script>
-      function imgLoaded(img){
-      var $img = $(img);
-      $img.parent().addClass('loaded');
-      };
-    </script>
-
     <!--google-analytics-->
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
