--- a/myblog/templates/blog/index.html
+++ b/myblog/templates/blog/index.html
@@ -1,31 +1,24 @@
 {% extends 'blog/base.html' %}
 {% load staticfiles %}
+
+{% block ogtags %}
+<meta property="og:type" content="Sujin Lee:Post" />
+<meta property="og:title" content="Blog - Sujin Lee" />
+<meta property="og:description" content="Creative Developer" />
+<meta property="og:image" content="http://www.sujinlee.me/image/background/profile-about.png" />
+<meta property="og:url" content="http://www.sujinlee.me/project/" />
+{% endblock %}
+
 {% block content %}
-<style>
-  body {background: #6200ea;}
-  .nav-wrap {background: none;}
-  .title a {color: #fff; opacity: 0.9;}
-  .one, .two, .three {background: #fff;}
-  .socials a {color: #fff; opacity: 0.6;}
-  .socials a:hover {opacity: 0.3;}
-  .copyright {color: #fff; opacity: 0.6;}
-  .title {display: none;}
-  .footer {display: none;}
-  .large-header {display: none;}
-  .index-title {display: none;}
-  #wrapper {overflow: hidden;}
-</style>
-<div id="large-header" class="large-header">
-  <canvas id="demo-canvas">
-  </canvas>
+<link rel="stylesheet" href="{% static 'src/css/index.css' %}">
+<div class="home_img">
+<img src="{% static 'image/background/profile-about.png' %}" alt="profile" >
 </div>
-<div class="index-title">
-    <h1>SUJIN LEE</h1>
-    <h2>{ The Connectivist }</h2>
-    <img class="svg index-icon" src="{% static 'image/svg-icons/code.svg' %}">
-    <img class="svg index-icon" src="{% static 'image/svg-icons/close.svg' %}">
-    <img class="svg index-icon" src="{% static 'image/svg-icons/image.svg' %}">
-    <img class="svg index-icon" src="{% static 'image/svg-icons/close.svg' %}">
-    <img class="svg index-icon" src="{% static 'image/svg-icons/music.svg' %}">
-</div>
+  <div class="home_title">
+    <h1>Sujin <mark>Lee</mark></h1>
+    <h2>Creative Developer</h2>
+    <h3>Living in Seoul, Korea.</h3>
+   <h3> Who loves Web and Music Collaboration.</h3>
+  </div>
+  <div class="straight_line"></div>
 {% endblock %}
